<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ToDoList">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.ToDoList" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/btnAddItem_margin"
        android:layout_marginBottom="16dp"
        android:foregroundTint="#FFFFFF"
        android:contentDescription="Click to add Item"
        app:srcCompat="@android:drawable/ic_input_add"
        android:clickable='true'
        android:onClick="showPopupWindow" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_background"
        android:visibility="gone"
        tools:visibility="gone">
        <!-- set the drawable resource here -->
        <!-- set the background color here -->

        <!-- UI elements for the pop-up window here -->
        <TextView
            android:id="@+id/popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:clickable='true'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/popup_window_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="146dp"
            android:text="Add Task"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@id/task_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:typeface="serif"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_title" />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:hint="Task Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_window_title" />

        <EditText
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="Today's Date"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/due_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name" />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="Due Date"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/reminder_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_date" />

        <TextView
            android:id="@+id/reminder_time_label"
            android:layout_width="wrap_content"
            android:text="Reminder Time"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:textSize="18sp"
            android:ems="10"
            app:layout_constraintBottom_toTopOf="@id/reminder_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/due_date" />


        <TimePicker
            android:id="@+id/reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:timePickerMode="spinner"
            android:format24Hour="true"
            android:hint="Reminder Time"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/due_date" />

        <EditText
            android:id="@+id/Prioritylev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="Description"
            android:maxLines="4"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="top|start"
            app:layout_constraintTop_toBottomOf="@+id/reminder_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_task_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="Create Task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>